--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,14 +1,12 @@
-#h2 console 접속
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-#h2 db 설정
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#mysql db 설정
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/unit_test
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
 #jpa 설정
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+# log level
+logging.level.root=INFO
