--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-web'
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-validation'
-        implementation 'com.h2database:h2'
-
+        //implementation 'com.h2database:h2'
+        runtimeOnly 'mysql:mysql-connector-java'
 
         compileOnly 'org.projectlombok:lombok:1.18.16'
         annotationProcessor 'org.projectlombok:lombok:1.18.16'
@@ -31,7 +31,11 @@ subprojects {
         testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
-        testRuntimeOnly 'com.h2database:h2'
+
+        testImplementation "org.testcontainers:testcontainers:1.17.2"
+        testImplementation "org.testcontainers:junit-jupiter:1.17.2"
+        testImplementation 'org.testcontainers:mysql:1.17.2'
+        // testRuntimeOnly 'com.h2database:h2'
     }
 
     bootJar { enabled = false }
