--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.5.5'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '2.5.5' apply false
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE' apply false
 }
 
 group = 'com.demo.unit'
@@ -22,7 +22,7 @@ subprojects {
         implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
         implementation 'org.springframework.boot:spring-boot-starter-validation'
         //implementation 'com.h2database:h2'
-        runtimeOnly 'mysql:mysql-connector-java'
+        implementation 'mysql:mysql-connector-java'
 
         compileOnly 'org.projectlombok:lombok:1.18.16'
         annotationProcessor 'org.projectlombok:lombok:1.18.16'
@@ -31,14 +31,10 @@ subprojects {
         testAnnotationProcessor 'org.projectlombok:lombok:1.18.16'
 
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
         testImplementation "org.testcontainers:testcontainers:1.17.2"
         testImplementation "org.testcontainers:junit-jupiter:1.17.2"
         testImplementation 'org.testcontainers:mysql:1.17.2'
-        // testRuntimeOnly 'com.h2database:h2'
+//        testRuntimeOnly 'com.h2database:h2'
     }
-
-    bootJar { enabled = false }
-    jar { enabled = true }
-    test { useJUnitPlatform() }
+    test.useJUnitPlatform()
 }
